Rename Posts to Log, fix Apple logo word wrap, and increase site title size

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -111,7 +111,7 @@ img {
 }
 
 .site-title {
-  font-size: $font-size-large;
+  font-size: 2rem;
   font-weight: $font-weight-semibold;
   text-decoration: none;
 }
